--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,17 @@ jobs:
       # - run:
           # name: "Test the executable"
           # command: .\bin\Release\netcoreapp2.1\win10-x64\publish\CircleCiCore.exe
-          
+      name: Creating Dummy Artifacts
+          command: |
+            echo "my artifact file" > /tmp/artifact-1;
+            mkdir /tmp/artifacts;
+            echo "my artifact files in a dir" > /tmp/artifacts/artifact-2;
+
       - store_artifacts:
-          path: .\bin\Release\netcoreapp2.1\win10-x64\publish\CircleCiCore.exe
+          path: /tmp/artifact-1
+          destination: artifact-file
+
+      - store_artifacts:
+          path: /tmp/artifacts
+      # - store_artifacts:
+          # path: .\bin\Release\netcoreapp2.1\win10-x64\publish\CircleCiCore.exe
