--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     executor:
       name: win/vs2019
       shell: powershell.exe
+      
+      working_directory: /tmp
+      
     steps:
       - checkout
       # - restore_cache:
