--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: dotnet.exe publish -c Release -r win10-x64
       - run:
           name: "Test the executable"
-          command: .\bin\Release\netcoreapp3.0\CircleCiCore.exe
+          command: ..\\CircleCiCore.exe
           
       - run:
           name: Creating Dummy Artifacts
