--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,10 @@ jobs:
       - run:
           name: "Run Build step"
           command: dotnet.exe publish -c Release -r win10-x64
+          
       - run:
           name: "Test the executable"
-          command: ..\\CircleCiCore.exe
+          command: .\bin\Release\netcoreapp3.0\publish\CircleCiCore.exe
           
       - run:
           name: Creating Dummy Artifacts
@@ -43,4 +44,4 @@ jobs:
       - store_artifacts:
           path: /tmp/artifacts
       - store_artifacts:
-          path: .\bin\Release\netcoreapp3.0\CircleCiCore.exe
+          path: .\bin\Release\netcoreapp3.0\publish\CircleCiCore.exe
